<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brouser">Brouser</string>
    <string name="profile">Profile</string>
    <string name="film">Films</string>
    <string name="emailpassword_title_text">EmailPassword</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified:%2$b)</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="signed_out">Signed_out</string>
    <string name="title_activity_authentication">Authentication</string>
    <string name="map">Map</string>
    <string name="title_activity_open_map">Open map</string>
</resources>