<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_brouser"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/brouser" />
        <item
            android:id="@+id/doodle"
            android:icon="@color/purple_200"
            android:title="Interes" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_film"
            android:icon="@drawable/film"
            android:title="@string/film" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/map" />

    </group>
</menu>