<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="183dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/firebase" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:text="@string/emailpassword_title_text" />

        <TextView
            android:id="@+id/status"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:text="Status" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:text="Singed in" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="16dp"
        android:gravity="center_vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="205dp" />

        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/emailPasswordFields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="fieldEmail, fieldPassword"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/emailSignInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fieldEmail" />

        <Button
            android:id="@+id/emailCreateAccountButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/fieldPassword" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/emailPasswordButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="emailCreateAccountButton, emailSignInButton"
            tools:layout_editor_absoluteY="16dp" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/signedInButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/androidIdSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SignInAndroidID"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fieldEmail"
            app:layout_constraintVertical_bias="0.935" />

        <Button
            android:id="@+id/createAccountInID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CreateINAndoidID"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.925"
            app:layout_constraintStart_toStartOf="@+id/emailSignInButton"
            app:layout_constraintTop_toTopOf="@+id/fieldPassword"
            app:layout_constraintVertical_bias="0.944" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>